--- a/analyse-common/pom.xml
+++ b/analyse-common/pom.xml
@@ -9,8 +9,28 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.parent</groupId>
+    <groupId>com.common</groupId>
     <artifactId>analyse-common</artifactId>
 
+    <dependencyManagement>
+        <dependencies>
+            <!-- https://mvnrepository.com/artifact/org.springframework/spring-framework-bom -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>5.0.1.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.0.0.M6</version>
+        </dependency>
+    </dependencies>
 </project>
