--- a/analyse-student/src/main/resources/config/application.yml
+++ b/analyse-student/src/main/resources/config/application.yml
@@ -26,21 +26,35 @@ mybatis:
 spring:
     profiles: dev
     datasource:
+       type: com.alibaba.druid.pool.DruidDataSource
        url: jdbc:mysql://localhost:3306/student?characterEncoding=utf-8
        username: root
        password:
        driver-class-name: com.mysql.jdbc.Driver
+       # 初始化大小，最小，最大
+       druid:
+         initial-size: 5
+         min-idle: 3
+         max-active: 20
+         max-wait: 60000
 server:
   port: 8080
 ---
 spring:
     profiles: prod
     datasource:
+       type: com.alibaba.druid.pool.DruidDataSource
        platform: mysql
        url: jdbc:mysql://localhost:3306/student?characterEncoding=utf-8
        username: root
        password:
        driver-class-name: com.mysql.jdbc.Driver
+       # 初始化大小，最小，最大
+       druid:
+         initial-size: 5
+         min-idle: 3
+         max-active: 20
+         max-wait: 60000
 server:
     port: 8081
 
