--- a/analyse-model/pom.xml
+++ b/analyse-model/pom.xml
@@ -14,9 +14,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.common</groupId>
-            <artifactId>analyse-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId></groupId>
+            <artifactId></artifactId>
         </dependency>
     </dependencies>
 </project>
