--- a/analyse-student/pom.xml
+++ b/analyse-student/pom.xml
@@ -49,12 +49,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>-->
-
-        <!--<dependency>
+        <dependency>
             <groupId>com.ibeetl</groupId>
             <artifactId>beetl-framework-starter</artifactId>
-            <version>1.1.22.RELEASE</version>
-        </dependency>-->
+            <version>1.1.23.RELEASE</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-spring-boot-starter -->
         <dependency>
