--- a/analyse-student/src/main/resources/config/application.yml
+++ b/analyse-student/src/main/resources/config/application.yml
@@ -27,6 +27,7 @@ mybatis:
     log-impl: org.apache.ibatis.logging.log4j2.Log4j2Impl
 logging:
   config: classpath:log4j2.xml
+  level: info
 mapper:
   mappers: mybatis.basemapper.BaseMapper
   not-empty: false
