--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,12 @@
     </build>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper-spring-boot-starter -->
+        <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper-spring-boot-starter
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>1.1.5</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
