--- a/analyse-common/pom.xml
+++ b/analyse-common/pom.xml
@@ -45,5 +45,13 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.5</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper-spring-boot-starter -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
     </dependencies>
 </project>
