--- a/analyse-student/pom.xml
+++ b/analyse-student/pom.xml
@@ -123,12 +123,13 @@
 			<version>3.17</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-scratchpad</artifactId>
+			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
 		</dependency>
+
 
 	</dependencies>
 
